# buddy-ai

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt  start.bat  start.sh  streamlit_app.py  streamlit_rag_agent.py  test.py  test2.py  test_rag_agent.py  test_router_knowledge.py  test_skills_sql_assistant.py  test_sql_agent.py  vectordb_search.py
.claude/: settings.json  settings.local.json
backend/: .env.example  Dockerfile  bandit_results.json  create_table.sql  docker-compose.yml  fix_collation.py  init_db.py  pyproject.toml  requirements.txt  start.bat  start.sh
backend/app/: __init__.py  config.py  main.py
backend/app/agent/: create_agent.py  document_retrieval_node.py  generate_response_node.py  grade_documents.py  graph.py  memory_retrieval_node.py  node.py  parallel_routing_node.py  rag_agent.py  response_format.py  retrieval_node.py  rewrite_question_node.py  routing_node.py  state.py  workflow_diagram.py
backend/app/api/v1/: chat.py  files.py  memory.py  sessions.py
backend/app/llm/: llm_factory.py
backend/app/memory/: memory_factory.py  memory_schema.py  memory_service.py
backend/app/prompt/: prompt.py
backend/app/retriever/: __init__.py  embeddings_model.py  get_retriever.py  huggingface_model.py  pgvector_store.py  qwen3_embedding.py  vector_store.py  vectorize_files.py
backend/app/services/: create_user_files_table.sql  db_pool.py  fulltext_search_service.py  pgvector_singleton.py  qwen_rerank_service.py  retrieval_orchestrator.py  user_file_service.py  vectorization_service.py
backend/app/tools/: __init__.py  retrieval_tool.py  system_tool.py  user_tool.py  web_search_tool.py
backend/app/utils/: datetime_utils.py  document_processing.py
backend/backend/chroma_db/: chroma.sqlite3
(+124 files in other folders)
