[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb==1.4.1",
    "dashscope==1.25.9",
    "fastapi==0.109.0",
    "langchain==1.2.7",
    "langchain-chroma==1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.16",
    "langchain-openai>=1.1.10",
    "langchain-postgres>=0.0.17",
    "langchain-tavily>=0.2.17",
    "langchain-text-splitters>=1.1.1",
    "langgraph==1.0.7",
    "langgraph-checkpoint==3.0.1",
    "langsmith>=0.7.9",
    "pgvector==0.3.6",
    "psycopg2-binary==2.9.9",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.1",
    "python-multipart==0.0.22",
    "redis==5.0.1",
    "tiktoken>=0.12.0",
    "uvicorn[standard]>=0.41.0",
]
